add: add a new page

--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap');
+
 html {
     scroll-behavior: smooth;
 }
@@ -7,10 +9,10 @@ body {
     margin-right: auto;
     width: 940px;
     color: #333333;
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
+.sobre-back {
     padding: 10px;
     background-image: url(../img/sobre-background.jpg);
 }
@@ -59,4 +61,39 @@ p {
 #familia-pelho {
     float: right;
     margin: 0 0 10px 10px;
+}
+
+header {
+    position: relative;
+}
+
+.sacola {
+    background: url(../img/sacola.png) no-repeat top right;
+    font-size: 14px;
+    padding-right: 35px;
+    text-align: right;
+    width: 140px;
+    padding-top: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.menu-opcoes ul {
+    font-size: 15px;
+}
+
+.menu-opcoes a {
+    color: #003366;
+}
+
+.menu-opcoes ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+.menu-opcoes {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
