--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,16 @@
 body {
     margin-left: auto;
     margin-right: auto;
-    width: 940px;
     color: #333333;
     font-family: 'Montserrat', sans-serif;
 }
 
 header {
     position: relative;
+}
+
+#main {
+    height: 70vh;
 }
 
 .sacola {
@@ -83,12 +86,11 @@ header {
     clear: left;
 }
 
-.destaque {
+.destaques {
     margin-top: 10px;
 }
 
 .menu-departamentos {
-    margin-top: 10px;
     padding-bottom: 10px;
 }
 
@@ -153,15 +155,15 @@ footer {
 }
 
 .social a[href*="facebook.com"] {
-    background-image: url(../img/facebook.png)
+    background-image: url(../img/facebook.png);
 }
 
 .social a[href*="twitter.com"] {
-    background-image: url(../img/twitter.png)
+    background-image: url(../img/twitter.png);
 }
 
 .social a[href*="plus.google.com"] {
-    background-image: url(../img/googleplus.png)
+    background-image: url(../img/googleplus.png);
 }
 
 footer .container {
@@ -177,4 +179,32 @@ footer .container {
 .social li {
     float: left;
     margin-left: 25px;
+}
+
+.corredor-img{
+    width: 100%;
+    height: 100%;
+    /* position: relative; */
+} 
+.corredor-img img {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.corredor-img img.active {
+    opacity: 1;
+}
+
+.paineis {
+    display: flex;
+}
+
+body div:nth-child(1){
+    width: 940px;
+    margin: 0 auto;
+}
+
+.container-main {
+    margin-bottom: 10px;
 }
